--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -4,8 +4,10 @@ FROM python:3.9-slim
 # Definir o diretório de trabalho
 WORKDIR /app
 
+RUN pip install -r requirements.txt
+
 # Copiar o arquivo main.py para o contêiner
-COPY main.py .
+COPY . .
 
 # Comando para rodar a aplicação
 CMD ["python", "main.py"]
