--- a/api_certificate/Dockerfile
+++ b/api_certificate/Dockerfile
@@ -8,9 +8,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
-RUN npm install mysql2
-RUN npm install amqplib
+RUN npm install mysql2 amqplib
 
 # Copy the rest of the application code
 COPY . .
