--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.9-slim
 # Definir o diretório de trabalho
 WORKDIR /app
 
-# Copiar o arquivo main.py para o contêiner
+# Copiar todos os arquivo para o contêiner
 COPY . .
 
 RUN pip install -r requirements.txt
