--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - "5672:5672"
       - "15672:15672"
     volumes:
-      - rabbitmq_data:/var/lib/rabbitmq  # Volume para persistir as mensagens
+      - rabbitmq_data:/var/lib/rabbitmq 
 
   mysql:
     image: mysql:5.7
