--- a/api_certificate/package.json
+++ b/api_certificate/package.json
@@ -11,7 +11,10 @@
   "description": "",
   "dependencies": {
     "amqplib": "^0.10.4",
+    "date-fns": "^4.1.0",
     "express": "^4.21.1",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.4",
+    "redis": "^4.7.0",
+    "uuid": "^11.0.2"
   }
 }
