--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,20 @@
 services:
-  # redis:
-  #   image: redis
-  #   environment:
-  #     MINIO_ROOT_USER: minioadmin
-  #     MINIO_ROOT_PASSWORD: minioadmin
-  #   command: server /data
-  #   ports:
-  #     - "9000:9000"
-  #     - "9001:9001"
-  #   volumes:
-  #     - ./diplomas:/data
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
+
+  redisinsight:
+    image: redis/redisinsight:latest
+    ports:
+      - "5540:5540"
+    environment:
+      - REDISINSIGHT_AUTH_USERNAME=admin
+      - REDISINSIGHT_AUTH_PASSWORD=admin123
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -17,7 +22,8 @@ services:
       - "5672:5672"
       - "15672:15672"
     volumes:
-      - rabbitmq_data:/var/lib/rabbitmq 
+      - rabbitmq_data:/var/lib/rabbitmq
+    restart: always 
 
   mysql:
     image: mysql:5.7
@@ -31,6 +37,7 @@ services:
       - ./db-mysql/ddl.sql:/docker-entrypoint-initdb.d/ddl.sql
     ports:
       - "3306:3306"
+    restart: always
 
   application:
     build:
@@ -41,12 +48,14 @@ services:
     depends_on:
       - mysql
       - rabbitmq
+    restart: always
 
   api_certificate:
     build:
       context: ./api_certificate
       dockerfile: Dockerfile
     environment:
+      - REDIS_HOST=redis
       - DB_HOST=mysql
       - DB_USER=user
       - DB_PASSWORD=userpassword
@@ -60,7 +69,9 @@ services:
       - rabbitmq
     ports:
       - "3000:3000"
+    restart: always  
 
 volumes:
   mysqldata:
   rabbitmq_data:
+  redis_data:
